--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Precise Pitch</string>
     <string name="title_activity_precise_pitch_home">Precise Pitch</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_fingerboard_heat_map">Fingerboard Heat Map</string>
 
 </resources>
