--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_fingerboard_heat_map">Fingerboard Heat Map</string>
     <string name="practice_note_sequences">Practice Note Sequences</string>
+    <string name="pitch_competition">Game of Pitches</string>
 
 </resources>
