Created CarRaceAnimation activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="title_activity_fingerboard_heat_map">Fingerboard Heat Map</string>
     <string name="practice_note_sequences">Practice Note Sequences</string>
     <string name="pitch_competition">Game of Pitches</string>
+    <string name="title_activity_car_race_animation">CarRaceAnimation</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
